# commix

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
commix/: __init__.py  cli.py  config.py  generator.py  git_utils.py  templates.py
commix/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
tests/: test_config.py  test_git_utils.py  test_templates.py
